[PaintWorklet] Fix shadow blur size when page zooms

When the page zooms, for example, to 200%, the size of the shadow blur
remains the same as when the page scale is 100%. The problem here is
that whenever we zoom the page, we queue a paint call back. Then the
new paint call back will set the shadow blur with the size that doesn't
account for the page zoom.

The fix is to override the BaseRenderingContext2d::setShadowBlur()
method with the zoom. Note that when we created the PaintRenderingContext2d
object, the |zoom| parameter includes the page zoom and device scale
factor.

This CL also includes a layout test to verify the correctness of the fix.

TBR=junov@chromium.org

Bug: 671849
Change-Id: I8b00dbf4f79e2430c424c762dbf008ac27706f54
Reviewed-on: https://chromium-review.googlesource.com/862525
Commit-Queue: Xida Chen <xidachen@chromium.org>
Reviewed-by: Tien-Ren Chen <trchen@chromium.org>
Reviewed-by: Ian Kilpatrick <ikilpatrick@chromium.org>
Cr-Commit-Position: refs/heads/master@{#528974}
Former-commit-id: 037f13946d29591fe1c1f6eeae6187645674aad0